# pandemic-game

./: README.md  pyproject.toml
config/: cities.yaml
src/pandemic/: action.py  cards.py  config.py  deck.py  decks.py  game.py  pandemic.py  roles.py
src/pandemic_game/: io.py  role.py  world.py
tests/: test_deck.py  test_game.py  test_io.py  test_world.py
