[tool.poetry]
name = "pandemic-game"
version = "0.1.0"
description = ""
authors = ["Gavin Strunk <gavin.strunk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<3.13"
pytest = "^8.3.4"
torch = "^2.5.1"
pettingzoo = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
